--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="css" href="app.css">
+   <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
 
