--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" type="text/css" href="css/app.css">
+   
 </head>
 <body>
 
-<h1>Binary Dream Home</h1>
+<h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
 <p>Welcome to Binary Dream website. It is where your Financial Dream Come True!!</p>
 
 </body>
