--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
 
 <h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
-<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!!</p>
+<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!!
+   SITE UNDER CONSTRUCTION
+
+
+</p>
 
 </body>
 </html>
