--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>Welcome to Binary Dream website. It is where your Financial Dream Come True!!
    SITE UNDER CONSTRUCTION
 
-
+<script src="https://unpkg.com/binary-charts@3.16.0/lib/binary-charts.js"></script>
 </p>
 
 </body>
