--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
-<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!!
+<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!! hahaha...
    SITE UNDER CONSTRUCTION
 
 
