--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <script src="https://unpkg.com/binary-charts@3.16.0/lib/binary-charts.js"></script>
+   window.onload = function () {
+
+var dataPoints = [];
+
+var options = {
+	theme: "light2",
+	title: {
+		text: "Live Chart from JSON Data"
+	},
+	data: [{
+		type: "spline",
+		dataPoints: dataPoints
+	}]
+};
+
+$("#chartContainer").CanvasJSChart(options);
+updateData();
+
+// Initial Values
+var xValue = 0;
+var yValue = 10;
+var newDataCount = 6;
+
+function addData(data) {
+	if (newDataCount != 1) {
+		$.each(data, function (key, value) {
+			dataPoints.push({ x: value[0], y: parseInt(value[1]) });
+			xValue++;
+			yValue = parseInt(value[1]);
+		});
+		newDataCount = 1;
+	} else {
+		//dataPoints.shift();
+		dataPoints.push({ x: data[0][0], y: parseInt(data[0][1]) });
+		xValue++;
+		yValue = parseInt(data[0][1]);
+	}
+	$("#chartContainer").CanvasJSChart().render();
+	setTimeout(updateData, 1000);
+}
+
+function updateData() {
+	$.getJSON("https://canvasjs.com/services/data/datapoints.php?xstart=" + xValue + "&ystart=" + yValue + "&length=" + newDataCount + "type=json", addData);
+}
+
+}
    <title> Binary Dream </title>
 </head>
 <body>
@@ -12,6 +57,8 @@
 
 
 </p>
-
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
 </html>
