--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ function updateData() {
    <title> Binary Dream </title>
 </head>
 <body>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script><br>	
 
 <h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
 <p>Welcome to Binary Dream website. It is where your Financial Dream Come True!! hahaha...
@@ -57,8 +60,6 @@ function updateData() {
 
 
 </p>
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+
 </body>
 </html>
