--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> Binary Dream </title>
+<script>
    window.onload = function () {
 
 var dataPoints = [];
@@ -47,7 +49,7 @@ function updateData() {
 }
 
 }
-   <title> Binary Dream </title>
+</script>	
 </head>
 <body>
 <div id="chartContainer" style="height: 300px; width: 100%;"></div>
