--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html>
 <head>
 <title> Binary Dream </title>
-<script>
+<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script><br>	
+
+</head>
+<body>
+<h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
+<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!! hahaha...
+   SITE UNDER CONSTRUCTION
+
+
+</p>
+
+<div id="chartContainer" style="height: 300px; width: 100%;">
+	<script>
    window.onload = function () {
 
 var dataPoints = [];
@@ -50,18 +63,11 @@ function updateData() {
 
 }
 </script>	
-</head>
-<body>
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script><br>	
+	
+	
+	
+</div>
 
-<h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
-<p>Welcome to Binary Dream website. It is where your Financial Dream Come True!! hahaha...
-   SITE UNDER CONSTRUCTION
-
-
-</p>
 
 </body>
 </html>
