--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <title> Binary Dream </title>
 <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script><br>	
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>	
 </head>
 	
 <body>
 <h1> <link rel="stylesheet" type="text/css" href="css/app.css"> Binary Dream Home</h1>
 <p>Welcome to Binary Dream website. It is where your Financial Dream Come True!! hahaha...
    SITE UNDER CONSTRUCTION
-</p>
+</p><br>
 
 <div id="chartContainer" style="height: 300px; width: 100%;">
 <script>
