--- a/index.html
+++ b/index.html
@@ -54,5 +54,7 @@ function updateData() {
 <div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
 <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script src="../../canvasjs.min.js"></script>
+	<h1>Welcome to Binary-Dream Website</h1>
+	<p>This Website is Under Construction</p>
 </body>
 </html>
