--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ var dataPoints = [];
 var chart = new CanvasJS.Chart("chartContainer", {
 	theme: "light2",
 	title: {
-		text: "Live Data"
+		text: "Binary Dream Website"
 	},
 	data: [{
 		type: "line",
