--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function updateData() {
 <script src="../../canvasjs.min.js"></script>
 	<h1>Welcome to Binary-Dream Website</h1>
 	<p>This Website is Under Construction</p><br>
-	<p>Last Tick is</p>
+	<p>Last Tick of R_100 is</p>
 	<p id="demo">
 	  
 	</p> 
