--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src="/javascript/app.js"></script>
+
 <script>
 window.onload = function() {
 
@@ -60,7 +60,7 @@ function updateData() {
 	
 	
 	<div id="contract proposal" >
-		
+		<script src=".../javascript/app.js"></script>
 		<p id="waktu"></p><br>
 		<p>-------------------------------------</p><br>
 		<form>
