--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
 </head>
 
+
 <body>
   
  <button class="tablink" onclick="openPage('Analyzer', this, 'DarkSlateGrey')">Analyzer</button>
@@ -14,8 +15,13 @@
 <button class="tablink" onclick="openPage('Statistic', this, 'SteelBlue ')">Statistic</button>
 
 <div id="Analyzer" class="tabcontent">
-  <h3>Analyzer</h3>
+  <h3>Volatility Index - www.binary.com</h3>
   <p>Analyzing Market..</p>
+  <div id="boxR10" class="box"><h5 class="textFormat">Volatility 10 Index</h5><p id="valueR10">Value R10</p></div>
+  <div id="boxR25" class="box"><h5 class="textFormat">Volatility 25 Index</h5><p id="valueR25">Value R25</p></div>
+  <div id="boxR50" class="box"><h5 class="textFormat">Volatility 50 Index</h5><p id="valueR50">Value R50</p></div>
+  <div id="boxR75" class="box"><h5 class="textFormat">Volatility 75 Index</h5><p id="valueR75">Value R75</p></div>
+  <div id="boxR100" class="box"><h5 class="textFormat">Volatility 100 Index</h5><p id="valueR100">Value R100</p></div>
 </div>
 
 <div id="Trades" class="tabcontent">
