--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 
 <body>
+    <h3>Welcome to Binary Dream website. Here you can't find what you are looking for.</h3>
   
- <button class="tablink" onclick="openPage('Analyzer', this, 'DarkSlateGrey')">Analyzer</button>
+<button class="tablink" onclick="openPage('Analyzer', this, 'DarkSlateGrey')">Analyzer</button>
 <button class="tablink" onclick="openPage('Trades', this, 'DarkSeaGreen')" id="defaultOpen">Trades</button>
 <button class="tablink" onclick="openPage('Logs', this, 'LightSeaGreen')">Logs</button>
 <button class="tablink" onclick="openPage('Statistic', this, 'SteelBlue ')">Statistic</button>
