--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 
 
 <body>
-    <h3>Welcome to Binary Dream website. Here you can't find what you are looking for.</h3>
-  
 <button class="tablink" onclick="openPage('Analyzer', this, 'DarkSlateGrey')">Analyzer</button>
 <button class="tablink" onclick="openPage('Trades', this, 'DarkSeaGreen')" id="defaultOpen">Trades</button>
 <button class="tablink" onclick="openPage('Logs', this, 'LightSeaGreen')">Logs</button>
 <button class="tablink" onclick="openPage('Statistic', this, 'SteelBlue ')">Statistic</button>
 
-<div id="Analyzer" class="tabcontent">
+<div id="Analyzer" class="tabcontent1">
   <h3>Volatility Index - www.binary.com</h3>
   <p>Analyzing Market..</p>
   <div id="boxR10" class="box"><h5 class="textFormat">Volatility 10 Index</h5><p id="valueR10">Value R10</p></div>
