--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <button class="tablink" onclick="openPage('Logs', this, 'LightSeaGreen')">Logs</button>
 <button class="tablink" onclick="openPage('Statistic', this, 'SteelBlue ')">Statistic</button>
 
-<div id="Analyzer" class="tabcontent1">
+<div id="Analyzer" class="tabcontent">
   <h3>Volatility Index - www.binary.com</h3>
   <p>Analyzing Market..</p>
   <div id="boxR10" class="box"><h5 class="textFormat">Volatility 10 Index</h5><p id="valueR10">Value R10</p></div>
