--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <button class="tablink" onclick="openPage('Statistic', this, 'SteelBlue ')">Statistic</button>
 
 <div id="Analyzer" class="tabcontent1">
-  <h3>Volatility Index - www.binary.com</h3>
+  <h3>Volatility Index Instruments - www.binary.com</h3>
   <p>Analyzing Market..</p>
   <div id="boxR10" class="box"><h5 class="textFormat">Volatility 10 Index</h5><p id="valueR10">Value R10</p></div>
   <div id="boxR25" class="box"><h5 class="textFormat">Volatility 25 Index</h5><p id="valueR25">Value R25</p></div>
